# data.gov.lt-interview

./: .gitignore  LICENSE  README.md  ins.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/modules/: load_data_into_classes.py  main.py  read_and_print_data_utils.py  retrieve_data.py  tables_classes.py
tests/: conftest.py  test_load_data_function.py  test_main_script.py  test_module.py  test_pretty_print_data.py  test_read_data_util.py  test_retrieve_data.py
