
[metadata]
name = modules 
description = project description
author = Stephen Adesina
license = MIT
license_file = LICENSE
platforms =  linux, win32
classifiers =
  
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    modules
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0


